# report-daily-logs

./: CMakeLists.txt  README.md
include/: PluginInterface.h  Utils.hpp
src/: PluginInterface.cpp  Utils.cpp
src/structures/: PluginStructures.hpp  ReportStructures.h
src/utils/: Utils.cpp  Utils.h  Utils.hpp
src/validators/: RequestValidator.cpp
