cmake_minimum_required(VERSION 3.16)
project(DailyLogsReport)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE UTILS_SOURCE      src/utils/*.cpp)
file(GLOB_RECURSE STRUCTURES_SOURCE src/structures/*.cpp)
file(GLOB_RECURSE VALIDATORS_SOURCE src/validators/*.cpp)

set(SOURCES
        src/PluginInterface.cpp
        ${UTILS_SOURCE}
        ${STRUCTURES_SOURCE}
        ${VALIDATORS_SOURCE}
)

add_library(DailyLogsReport SHARED ${SOURCES})

target_include_directories(DailyLogsReport PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/src
)
